parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    SYNCHRONIZED
    DEFAULT
    ABSTRACT
    GOTO
    ASSERT
    TRANSIENT
    WHILE
    PROTECTED
    FINAL
    CASE
    THROW
    PRIVATE
    STRICTFP
    CONTINUE
    COLON
    CATCH
    IMPLEMENTS
    D
    PACKAGE
    ENUM
    NATIVE
    NOT
    FINALLY
    EXTENDS
    IMPORT
    BYTE
    AND
    PLUSEQUAL
    MINUSEQUAL
    OR
    BREAK
    THIS
    VOLATILE
    INTERFACE
    THROWS
    SWITCH
    SUPER
    INSTANCEOF
    MOD

Grammar

Rule 0     S' -> java
Rule 1     java -> element java
Rule 2     java -> <empty>
Rule 3     element -> PUBLIC CLASS IDENTIFIER compoundelem
Rule 4     compoundelem -> LBRACE elements RBRACE
Rule 5     elements -> element elements
Rule 6     elements -> <empty>
Rule 7     element -> statement
Rule 8     element -> PUBLIC return_type IDENTIFIER LPAREN optparams RPAREN compoundstmt
Rule 9     element -> PUBLIC STATIC return_type IDENTIFIER LPAREN optparams RPAREN compoundstmt
Rule 10    return_type -> type
Rule 11    optparams -> params
Rule 12    optparams -> <empty>
Rule 13    params -> type IDENTIFIER COMMA params
Rule 14    params -> type LBRACKET RBRACKET IDENTIFIER COMMA params
Rule 15    params -> type IDENTIFIER
Rule 16    params -> type LBRACKET RBRACKET IDENTIFIER
Rule 17    statement -> RETURN exp SEMI
Rule 18    statement -> FOR LPAREN statement exp SEMI exp RPAREN compoundstmt
Rule 19    statement -> IF LPAREN exp RPAREN ifstmt
Rule 20    statement -> IF LPAREN exp RPAREN ifstmt ELSE elsestmt
Rule 21    ifstmt -> statement
Rule 22    ifstmt -> compoundstmt
Rule 23    compoundstmt -> LBRACE statements RBRACE
Rule 24    statements -> statement statements
Rule 25    statements -> <empty>
Rule 26    elsestmt -> statement
Rule 27    elsestmt -> compoundstmt
Rule 28    statement -> exp SEMI
Rule 29    statement -> IDENTIFIER EQUALS exp SEMI
Rule 30    statement -> IDENTIFIER LBRACKET INT RBRACKET EQUALS exp SEMI
Rule 31    statement -> IDENTIFIER LBRACKET IDENTIFIER RBRACKET EQUALS exp SEMI
Rule 32    statement -> type IDENTIFIER SEMI
Rule 33    statement -> type IDENTIFIER EQUALS exp SEMI
Rule 34    statement -> type LBRACKET RBRACKET IDENTIFIER EQUALS NEW type LBRACKET INT RBRACKET SEMI
Rule 35    statement -> SYSTEM PERIOD OUT PERIOD PRINTLN LPAREN exp RPAREN SEMI
Rule 36    type -> INT
Rule 37    type -> DOUBLE
Rule 38    type -> CHAR
Rule 39    type -> STRING
Rule 40    type -> BOOLEAN
Rule 41    type -> VOID
Rule 42    exp -> IDENTIFIER LPAREN optargs RPAREN
Rule 43    optargs -> args
Rule 44    optargs -> <empty>
Rule 45    args -> exp COMMA args
Rule 46    args -> exp
Rule 47    exp -> INT
Rule 48    exp -> DOUBLE
Rule 49    exp -> IDENTIFIER
Rule 50    exp -> IDENTIFIER LBRACKET INT RBRACKET
Rule 51    exp -> IDENTIFIER LBRACKET IDENTIFIER RBRACKET
Rule 52    exp -> PLUSPLUS IDENTIFIER
Rule 53    exp -> MINUSMINUS IDENTIFIER
Rule 54    exp -> exp PLUS exp
Rule 55    exp -> exp MINUS exp
Rule 56    exp -> exp TIMES exp
Rule 57    exp -> exp DIVIDE exp
Rule 58    exp -> exp GT exp
Rule 59    exp -> exp GE exp
Rule 60    exp -> exp LT exp
Rule 61    exp -> exp LE exp
Rule 62    exp -> exp EQ exp
Rule 63    exp -> exp NE exp
Rule 64    exp -> LPAREN exp PLUS exp RPAREN
Rule 65    exp -> LPAREN exp MINUS exp RPAREN
Rule 66    exp -> LPAREN exp TIMES exp RPAREN
Rule 67    exp -> LPAREN exp DIVIDE exp RPAREN
Rule 68    exp -> LPAREN exp GT exp RPAREN
Rule 69    exp -> LPAREN exp GE exp RPAREN
Rule 70    exp -> LPAREN exp LT exp RPAREN
Rule 71    exp -> LPAREN exp LE exp RPAREN
Rule 72    exp -> LPAREN exp EQ exp RPAREN
Rule 73    exp -> LPAREN exp NE exp RPAREN
Rule 74    exp -> CHAR
Rule 75    exp -> STRING
Rule 76    exp -> BOOLEAN

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 
ASSERT               : 
BOOLEAN              : 40 76
BREAK                : 
BYTE                 : 
CASE                 : 
CATCH                : 
CHAR                 : 38 74
CLASS                : 3
COLON                : 
COMMA                : 13 14 45
CONST                : 
CONTINUE             : 
D                    : 
DEFAULT              : 
DIVIDE               : 57 67
DOUBLE               : 37 48
ELSE                 : 20
ENUM                 : 
EQ                   : 62 72
EQUALS               : 29 30 31 33 34
EXTENDS              : 
FINAL                : 
FINALLY              : 
FOR                  : 18
GE                   : 59 69
GOTO                 : 
GT                   : 58 68
IDENTIFIER           : 3 8 9 13 14 15 16 29 30 31 31 32 33 34 42 49 50 51 51 52 53
IF                   : 19 20
IMPLEMENTS           : 
IMPORT               : 
INSTANCEOF           : 
INT                  : 30 34 36 47 50
INTERFACE            : 
LBRACE               : 4 23
LBRACKET             : 14 16 30 31 34 34 50 51
LE                   : 61 71
LPAREN               : 8 9 18 19 20 35 42 64 65 66 67 68 69 70 71 72 73
LT                   : 60 70
MINUS                : 55 65
MINUSEQUAL           : 
MINUSMINUS           : 53
MOD                  : 
NATIVE               : 
NE                   : 63 73
NEW                  : 34
NOT                  : 
OR                   : 
OUT                  : 35
PACKAGE              : 
PERIOD               : 35 35
PLUS                 : 54 64
PLUSEQUAL            : 
PLUSPLUS             : 52
PRINTLN              : 35
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 3 8 9
RBRACE               : 4 23
RBRACKET             : 14 16 30 31 34 34 50 51
RETURN               : 17
RPAREN               : 8 9 18 19 20 35 42 64 65 66 67 68 69 70 71 72 73
SEMI                 : 17 18 28 29 30 31 32 33 34 35
STATIC               : 9
STRICTFP             : 
STRING               : 39 75
SUPER                : 
SWITCH               : 
SYNCHRONIZED         : 
SYSTEM               : 35
THIS                 : 
THROW                : 
THROWS               : 
TIMES                : 56 66
TRANSIENT            : 
VOID                 : 41
VOLATILE             : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

args                 : 43 45
compoundelem         : 3
compoundstmt         : 8 9 18 22 27
element              : 1 5
elements             : 4 5
elsestmt             : 20
exp                  : 17 18 18 19 20 28 29 30 31 33 35 45 46 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73
ifstmt               : 19 20
java                 : 1 0
optargs              : 42
optparams            : 8 9
params               : 11 13 14
return_type          : 8 9
statement            : 7 18 21 24 26
statements           : 23 24
type                 : 10 13 14 15 16 32 33 34 34

Parsing method: LALR

state 0

    (0) S' -> . java
    (1) java -> . element java
    (2) java -> .
    (3) element -> . PUBLIC CLASS IDENTIFIER compoundelem
    (7) element -> . statement
    (8) element -> . PUBLIC return_type IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (9) element -> . PUBLIC STATIC return_type IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (17) statement -> . RETURN exp SEMI
    (18) statement -> . FOR LPAREN statement exp SEMI exp RPAREN compoundstmt
    (19) statement -> . IF LPAREN exp RPAREN ifstmt
    (20) statement -> . IF LPAREN exp RPAREN ifstmt ELSE elsestmt
    (28) statement -> . exp SEMI
    (29) statement -> . IDENTIFIER EQUALS exp SEMI
    (30) statement -> . IDENTIFIER LBRACKET INT RBRACKET EQUALS exp SEMI
    (31) statement -> . IDENTIFIER LBRACKET IDENTIFIER RBRACKET EQUALS exp SEMI
    (32) statement -> . type IDENTIFIER SEMI
    (33) statement -> . type IDENTIFIER EQUALS exp SEMI
    (34) statement -> . type LBRACKET RBRACKET IDENTIFIER EQUALS NEW type LBRACKET INT RBRACKET SEMI
    (35) statement -> . SYSTEM PERIOD OUT PERIOD PRINTLN LPAREN exp RPAREN SEMI
    (42) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (47) exp -> . INT
    (48) exp -> . DOUBLE
    (49) exp -> . IDENTIFIER
    (50) exp -> . IDENTIFIER LBRACKET INT RBRACKET
    (51) exp -> . IDENTIFIER LBRACKET IDENTIFIER RBRACKET
    (52) exp -> . PLUSPLUS IDENTIFIER
    (53) exp -> . MINUSMINUS IDENTIFIER
    (54) exp -> . exp PLUS exp
    (55) exp -> . exp MINUS exp
    (56) exp -> . exp TIMES exp
    (57) exp -> . exp DIVIDE exp
    (58) exp -> . exp GT exp
    (59) exp -> . exp GE exp
    (60) exp -> . exp LT exp
    (61) exp -> . exp LE exp
    (62) exp -> . exp EQ exp
    (63) exp -> . exp NE exp
    (64) exp -> . LPAREN exp PLUS exp RPAREN
    (65) exp -> . LPAREN exp MINUS exp RPAREN
    (66) exp -> . LPAREN exp TIMES exp RPAREN
    (67) exp -> . LPAREN exp DIVIDE exp RPAREN
    (68) exp -> . LPAREN exp GT exp RPAREN
    (69) exp -> . LPAREN exp GE exp RPAREN
    (70) exp -> . LPAREN exp LT exp RPAREN
    (71) exp -> . LPAREN exp LE exp RPAREN
    (72) exp -> . LPAREN exp EQ exp RPAREN
    (73) exp -> . LPAREN exp NE exp RPAREN
    (74) exp -> . CHAR
    (75) exp -> . STRING
    (76) exp -> . BOOLEAN
    (36) type -> . INT
    (37) type -> . DOUBLE
    (38) type -> . CHAR
    (39) type -> . STRING
    (40) type -> . BOOLEAN
    (41) type -> . VOID

    $end            reduce using rule 2 (java -> .)
    PUBLIC          shift and go to state 17
    RETURN          shift and go to state 2
    FOR             shift and go to state 11
    IF              shift and go to state 4
    IDENTIFIER      shift and go to state 9
    SYSTEM          shift and go to state 16
    INT             shift and go to state 15
    DOUBLE          shift and go to state 20
    PLUSPLUS        shift and go to state 12
    MINUSMINUS      shift and go to state 1
    LPAREN          shift and go to state 13
    CHAR            shift and go to state 14
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 18
    VOID            shift and go to state 3

    java                           shift and go to state 6
    exp                            shift and go to state 19
    type                           shift and go to state 10
    element                        shift and go to state 5
    statement                      shift and go to state 7

state 1

    (53) exp -> MINUSMINUS . IDENTIFIER

    IDENTIFIER      shift and go to state 21


state 2

    (17) statement -> RETURN . exp SEMI
    (42) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (47) exp -> . INT
    (48) exp -> . DOUBLE
    (49) exp -> . IDENTIFIER
    (50) exp -> . IDENTIFIER LBRACKET INT RBRACKET
    (51) exp -> . IDENTIFIER LBRACKET IDENTIFIER RBRACKET
    (52) exp -> . PLUSPLUS IDENTIFIER
    (53) exp -> . MINUSMINUS IDENTIFIER
    (54) exp -> . exp PLUS exp
    (55) exp -> . exp MINUS exp
    (56) exp -> . exp TIMES exp
    (57) exp -> . exp DIVIDE exp
    (58) exp -> . exp GT exp
    (59) exp -> . exp GE exp
    (60) exp -> . exp LT exp
    (61) exp -> . exp LE exp
    (62) exp -> . exp EQ exp
    (63) exp -> . exp NE exp
    (64) exp -> . LPAREN exp PLUS exp RPAREN
    (65) exp -> . LPAREN exp MINUS exp RPAREN
    (66) exp -> . LPAREN exp TIMES exp RPAREN
    (67) exp -> . LPAREN exp DIVIDE exp RPAREN
    (68) exp -> . LPAREN exp GT exp RPAREN
    (69) exp -> . LPAREN exp GE exp RPAREN
    (70) exp -> . LPAREN exp LT exp RPAREN
    (71) exp -> . LPAREN exp LE exp RPAREN
    (72) exp -> . LPAREN exp EQ exp RPAREN
    (73) exp -> . LPAREN exp NE exp RPAREN
    (74) exp -> . CHAR
    (75) exp -> . STRING
    (76) exp -> . BOOLEAN

    IDENTIFIER      shift and go to state 23
    INT             shift and go to state 25
    DOUBLE          shift and go to state 26
    PLUSPLUS        shift and go to state 12
    MINUSMINUS      shift and go to state 1
    LPAREN          shift and go to state 13
    CHAR            shift and go to state 24
    STRING          shift and go to state 22
    BOOLEAN         shift and go to state 27

    exp                            shift and go to state 28

state 3

    (41) type -> VOID .

    IDENTIFIER      reduce using rule 41 (type -> VOID .)
    LBRACKET        reduce using rule 41 (type -> VOID .)


state 4

    (19) statement -> IF . LPAREN exp RPAREN ifstmt
    (20) statement -> IF . LPAREN exp RPAREN ifstmt ELSE elsestmt

    LPAREN          shift and go to state 29


state 5

    (1) java -> element . java
    (1) java -> . element java
    (2) java -> .
    (3) element -> . PUBLIC CLASS IDENTIFIER compoundelem
    (7) element -> . statement
    (8) element -> . PUBLIC return_type IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (9) element -> . PUBLIC STATIC return_type IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (17) statement -> . RETURN exp SEMI
    (18) statement -> . FOR LPAREN statement exp SEMI exp RPAREN compoundstmt
    (19) statement -> . IF LPAREN exp RPAREN ifstmt
    (20) statement -> . IF LPAREN exp RPAREN ifstmt ELSE elsestmt
    (28) statement -> . exp SEMI
    (29) statement -> . IDENTIFIER EQUALS exp SEMI
    (30) statement -> . IDENTIFIER LBRACKET INT RBRACKET EQUALS exp SEMI
    (31) statement -> . IDENTIFIER LBRACKET IDENTIFIER RBRACKET EQUALS exp SEMI
    (32) statement -> . type IDENTIFIER SEMI
    (33) statement -> . type IDENTIFIER EQUALS exp SEMI
    (34) statement -> . type LBRACKET RBRACKET IDENTIFIER EQUALS NEW type LBRACKET INT RBRACKET SEMI
    (35) statement -> . SYSTEM PERIOD OUT PERIOD PRINTLN LPAREN exp RPAREN SEMI
    (42) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (47) exp -> . INT
    (48) exp -> . DOUBLE
    (49) exp -> . IDENTIFIER
    (50) exp -> . IDENTIFIER LBRACKET INT RBRACKET
    (51) exp -> . IDENTIFIER LBRACKET IDENTIFIER RBRACKET
    (52) exp -> . PLUSPLUS IDENTIFIER
    (53) exp -> . MINUSMINUS IDENTIFIER
    (54) exp -> . exp PLUS exp
    (55) exp -> . exp MINUS exp
    (56) exp -> . exp TIMES exp
    (57) exp -> . exp DIVIDE exp
    (58) exp -> . exp GT exp
    (59) exp -> . exp GE exp
    (60) exp -> . exp LT exp
    (61) exp -> . exp LE exp
    (62) exp -> . exp EQ exp
    (63) exp -> . exp NE exp
    (64) exp -> . LPAREN exp PLUS exp RPAREN
    (65) exp -> . LPAREN exp MINUS exp RPAREN
    (66) exp -> . LPAREN exp TIMES exp RPAREN
    (67) exp -> . LPAREN exp DIVIDE exp RPAREN
    (68) exp -> . LPAREN exp GT exp RPAREN
    (69) exp -> . LPAREN exp GE exp RPAREN
    (70) exp -> . LPAREN exp LT exp RPAREN
    (71) exp -> . LPAREN exp LE exp RPAREN
    (72) exp -> . LPAREN exp EQ exp RPAREN
    (73) exp -> . LPAREN exp NE exp RPAREN
    (74) exp -> . CHAR
    (75) exp -> . STRING
    (76) exp -> . BOOLEAN
    (36) type -> . INT
    (37) type -> . DOUBLE
    (38) type -> . CHAR
    (39) type -> . STRING
    (40) type -> . BOOLEAN
    (41) type -> . VOID

    $end            reduce using rule 2 (java -> .)
    PUBLIC          shift and go to state 17
    RETURN          shift and go to state 2
    FOR             shift and go to state 11
    IF              shift and go to state 4
    IDENTIFIER      shift and go to state 9
    SYSTEM          shift and go to state 16
    INT             shift and go to state 15
    DOUBLE          shift and go to state 20
    PLUSPLUS        shift and go to state 12
    MINUSMINUS      shift and go to state 1
    LPAREN          shift and go to state 13
    CHAR            shift and go to state 14
    STRING          shift and go to state 8
    BOOLEAN         shift and go to state 18
    VOID            shift and go to state 3

    java                           shift and go to state 30
    exp                            shift and go to state 19
    type                           shift and go to state 10
    element                        shift and go to state 5
    statement                      shift and go to state 7

state 6

    (0) S' -> java .



state 7

    (7) element -> statement .

    PUBLIC          reduce using rule 7 (element -> statement .)
    RETURN          reduce using rule 7 (element -> statement .)
    FOR             reduce using rule 7 (element -> statement .)
    IF              reduce using rule 7 (element -> statement .)
    IDENTIFIER      reduce using rule 7 (element -> statement .)
    SYSTEM          reduce using rule 7 (element -> statement .)
    INT             reduce using rule 7 (element -> statement .)
    DOUBLE          reduce using rule 7 (element -> statement .)
    PLUSPLUS        reduce using rule 7 (element -> statement .)
    MINUSMINUS      reduce using rule 7 (element -> statement .)
    LPAREN          reduce using rule 7 (element -> statement .)
    CHAR            reduce using rule 7 (element -> statement .)
    STRING          reduce using rule 7 (element -> statement .)
    BOOLEAN         reduce using rule 7 (element -> statement .)
    VOID            reduce using rule 7 (element -> statement .)
    RBRACE          reduce using rule 7 (element -> statement .)
    $end            reduce using rule 7 (element -> statement .)


state 8

    (75) exp -> STRING .
    (39) type -> STRING .

    SEMI            reduce using rule 75 (exp -> STRING .)
    PLUS            reduce using rule 75 (exp -> STRING .)
    MINUS           reduce using rule 75 (exp -> STRING .)
    TIMES           reduce using rule 75 (exp -> STRING .)
    DIVIDE          reduce using rule 75 (exp -> STRING .)
    GT              reduce using rule 75 (exp -> STRING .)
    GE              reduce using rule 75 (exp -> STRING .)
    LT              reduce using rule 75 (exp -> STRING .)
    LE              reduce using rule 75 (exp -> STRING .)
    EQ              reduce using rule 75 (exp -> STRING .)
    NE              reduce using rule 75 (exp -> STRING .)
    IDENTIFIER      reduce using rule 39 (type -> STRING .)
    LBRACKET        reduce using rule 39 (type -> STRING .)


state 9

    (29) statement -> IDENTIFIER . EQUALS exp SEMI
    (30) statement -> IDENTIFIER . LBRACKET INT RBRACKET EQUALS exp SEMI
    (31) statement -> IDENTIFIER . LBRACKET IDENTIFIER RBRACKET EQUALS exp SEMI
    (42) exp -> IDENTIFIER . LPAREN optargs RPAREN
    (49) exp -> IDENTIFIER .
    (50) exp -> IDENTIFIER . LBRACKET INT RBRACKET
    (51) exp -> IDENTIFIER . LBRACKET IDENTIFIER RBRACKET

    EQUALS          shift and go to state 32
    LBRACKET        shift and go to state 33
    LPAREN          shift and go to state 31
    SEMI            reduce using rule 49 (exp -> IDENTIFIER .)
    PLUS            reduce using rule 49 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 49 (exp -> IDENTIFIER .)
    TIMES           reduce using rule 49 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 49 (exp -> IDENTIFIER .)
    GT              reduce using rule 49 (exp -> IDENTIFIER .)
    GE              reduce using rule 49 (exp -> IDENTIFIER .)
    LT              reduce using rule 49 (exp -> IDENTIFIER .)
    LE              reduce using rule 49 (exp -> IDENTIFIER .)
    EQ              reduce using rule 49 (exp -> IDENTIFIER .)
    NE              reduce using rule 49 (exp -> IDENTIFIER .)


state 10

    (32) statement -> type . IDENTIFIER SEMI
    (33) statement -> type . IDENTIFIER EQUALS exp SEMI
    (34) statement -> type . LBRACKET RBRACKET IDENTIFIER EQUALS NEW type LBRACKET INT RBRACKET SEMI

    IDENTIFIER      shift and go to state 35
    LBRACKET        shift and go to state 34


state 11

    (18) statement -> FOR . LPAREN statement exp SEMI exp RPAREN compoundstmt

    LPAREN          shift and go to state 36


state 12

    (52) exp -> PLUSPLUS . IDENTIFIER

    IDENTIFIER      shift and go to state 37


state 13

    (64) exp -> LPAREN . exp PLUS exp RPAREN
    (65) exp -> LPAREN . exp MINUS exp RPAREN
    (66) exp -> LPAREN . exp TIMES exp RPAREN
    (67) exp -> LPAREN . exp DIVIDE exp RPAREN
    (68) exp -> LPAREN . exp GT exp RPAREN
    (69) exp -> LPAREN . exp GE exp RPAREN
    (70) exp -> LPAREN . exp LT exp RPAREN
    (71) exp -> LPAREN . exp LE exp RPAREN
    (72) exp -> LPAREN . exp EQ exp RPAREN
    (73) exp -> LPAREN . exp NE exp RPAREN
    (42) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (47) exp -> . INT
    (48) exp -> . DOUBLE
    (49) exp -> . IDENTIFIER
    (50) exp -> . IDENTIFIER LBRACKET INT RBRACKET
    (51) exp -> . IDENTIFIER LBRACKET IDENTIFIER RBRACKET
    (52) exp -> . PLUSPLUS IDENTIFIER
    (53) exp -> . MINUSMINUS IDENTIFIER
    (54) exp -> . exp PLUS exp
    (55) exp -> . exp MINUS exp
    (56) exp -> . exp TIMES exp
    (57) exp -> . exp DIVIDE exp
    (58) exp -> . exp GT exp
    (59) exp -> . exp GE exp
    (60) exp -> . exp LT exp
    (61) exp -> . exp LE exp
    (62) exp -> . exp EQ exp
    (63) exp -> . exp NE exp
    (64) exp -> . LPAREN exp PLUS exp RPAREN
    (65) exp -> . LPAREN exp MINUS exp RPAREN
    (66) exp -> . LPAREN exp TIMES exp RPAREN
    (67) exp -> . LPAREN exp DIVIDE exp RPAREN
    (68) exp -> . LPAREN exp GT exp RPAREN
    (69) exp -> . LPAREN exp GE exp RPAREN
    (70) exp -> . LPAREN exp LT exp RPAREN
    (71) exp -> . LPAREN exp LE exp RPAREN
    (72) exp -> . LPAREN exp EQ exp RPAREN
    (73) exp -> . LPAREN exp NE exp RPAREN
    (74) exp -> . CHAR
    (75) exp -> . STRING
    (76) exp -> . BOOLEAN

    IDENTIFIER      shift and go to state 23
    INT             shift and go to state 25
    DOUBLE          shift and go to state 26
    PLUSPLUS        shift and go to state 12
    MINUSMINUS      shift and go to state 1
    LPAREN          shift and go to state 13
    CHAR            shift and go to state 24
    STRING          shift and go to state 22
    BOOLEAN         shift and go to state 27

    exp                            shift and go to state 38

state 14

    (74) exp -> CHAR .
    (38) type -> CHAR .

    SEMI            reduce using rule 74 (exp -> CHAR .)
    PLUS            reduce using rule 74 (exp -> CHAR .)
    MINUS           reduce using rule 74 (exp -> CHAR .)
    TIMES           reduce using rule 74 (exp -> CHAR .)
    DIVIDE          reduce using rule 74 (exp -> CHAR .)
    GT              reduce using rule 74 (exp -> CHAR .)
    GE              reduce using rule 74 (exp -> CHAR .)
    LT              reduce using rule 74 (exp -> CHAR .)
    LE              reduce using rule 74 (exp -> CHAR .)
    EQ              reduce using rule 74 (exp -> CHAR .)
    NE              reduce using rule 74 (exp -> CHAR .)
    IDENTIFIER      reduce using rule 38 (type -> CHAR .)
    LBRACKET        reduce using rule 38 (type -> CHAR .)


state 15

    (47) exp -> INT .
    (36) type -> INT .

    SEMI            reduce using rule 47 (exp -> INT .)
    PLUS            reduce using rule 47 (exp -> INT .)
    MINUS           reduce using rule 47 (exp -> INT .)
    TIMES           reduce using rule 47 (exp -> INT .)
    DIVIDE          reduce using rule 47 (exp -> INT .)
    GT              reduce using rule 47 (exp -> INT .)
    GE              reduce using rule 47 (exp -> INT .)
    LT              reduce using rule 47 (exp -> INT .)
    LE              reduce using rule 47 (exp -> INT .)
    EQ              reduce using rule 47 (exp -> INT .)
    NE              reduce using rule 47 (exp -> INT .)
    IDENTIFIER      reduce using rule 36 (type -> INT .)
    LBRACKET        reduce using rule 36 (type -> INT .)


state 16

    (35) statement -> SYSTEM . PERIOD OUT PERIOD PRINTLN LPAREN exp RPAREN SEMI

    PERIOD          shift and go to state 39


state 17
